# koharu

sohai-koharu/: .gitignore  README.md  index.html  package.json  vite.config.ts
sohai-koharu/sidecar/: main.py  requirements.txt
sohai-koharu/sidecar/detection/: router.py
sohai-koharu/sidecar/inpaint/: router.py
sohai-koharu/sidecar/models/: registry.py  router.py
sohai-koharu/sidecar/ocr/: router.py
sohai-koharu/sidecar/translate/: router.py
sohai-koharu/src/: App.tsx
sohai-koharu/src-tauri/: Cargo.toml  tauri.conf.json
sohai-koharu/src-tauri/src/: database.rs  lib.rs  main.rs  sidecar.rs
sohai-koharu/src-tauri/src/commands/: library.rs  mod.rs  pipeline.rs  sidecar.rs
sohai-koharu/src/components/canvas/: BrushCanvas.tsx  TextBlockLayer.tsx  ToolRail.tsx  Workspace.tsx
sohai-koharu/src/components/layout/: MenuBar.tsx  StatusBar.tsx
sohai-koharu/src/components/panels/: ControlsPanel.tsx  Navigator.tsx
sohai-koharu/src/components/ui/: Button.tsx
sohai-koharu/src/hooks/: useCanvasGestures.ts  useKeyboardShortcuts.ts  usePipeline.ts
sohai-koharu/src/lib/: sidecar.ts  tauri.ts
sohai-koharu/src/stores/: aiStore.ts  editorStore.ts  libraryStore.ts  textBlocksStore.ts
sohai-koharu/src/styles/: globals.css
