[package]
name = "sohai-koharu"
version = "0.1.0"
description = "MangaLens 2.0 - ML-powered manga translator"
authors = ["OSohaii"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "sohai_koharu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = "0.25"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
